syntax = "proto3";

package grpc_health_proxy;

option go_package = "grpc_health_proxy";

import "google/api/annotations.proto";

message HealthCheckRequest {
    string service = 1;
}

message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
        SERVICE_UNKNOWN = 3;
    }
    ServingStatus status = 1;
}

service Health {
    rpc Check (HealthCheckRequest) returns (HealthCheckResponse) {
        option (google.api.http) = {
			get: "/healthz/{service}"
			additional_bindings {
				get: "/healthz"
			}
		};
    };

}